# api-appointments

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci-cd.yml  pipeline.yaml
api-drf/appointments/: models.py  serializers.py  views.py
api-drf/appointments/tests/: test_views.py
api-drf/authentication/: urls.py
api-drf/core/: settings.py
api-drf/health_professionals/: models.py  serializers.py  views.py
api-drf/health_professionals/migrations/: 0003_healthprofessional_address_and_more.py
api-drf/health_professionals/tests/: test_views.py
appointments/: admin.py  models.py  serializers.py  urls.py  views.py
appointments/migrations/: 0001_initial.py  0002_remove_appointments_professional_and_more.py  0003_rename_data_appointments_date.py
authentication/: urls.py
core/: settings.py  urls.py
djangoapi/: .flake8  pyproject.toml
djangoapi/appointments/: admin.py  models.py  serializers.py  urls.py  views.py
djangoapi/appointments/migrations/: 0004_alter_appointments_options_and_more.py
djangoapi/appointments/tests/: test_views.py
djangoapi/core/: settings.py  urls.py  wsgi.py
djangoapi/health_professionals/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
djangoapi/health_professionals/migrations/: 0004_alter_healthprofessional_options_and_more.py
djangoapi/health_professionals/tests/: test_views.py
dotenv_files/: .env-example  .env.dev  .env.example
health_professionals/: apps.py  models.py  serializers.py  urls.py  views.py
health_professionals/migrations/: 0001_initial.py  0002_remove_healthprofessional_address_and_more.py
health_professionals/tests/: test_views.py
nginx/conf.d/: default.conf
scripts/: commands.sh  entrypoint.sh
